lib/dmp40/TLDFM.h

//==============================================================================
// Global functions
ViStatus _VI_FUNC TLDFM_get_device_count              (ViSession instrumentHandle,
                                                       ViUInt32* pDeviceCount);
ViStatus _VI_FUNC TLDFM_get_device_information        (ViSession  instrumentHandle,
	                                                   ViUInt32   deviceIndex,
													   ViChar     manufacturer[],
													   ViChar     instrumentName[],
													   ViChar     serialNumber[],
													   ViBoolean* pDeviceAvailable,
													   ViChar     resourceName[]);
//******************************************************************************
// required VXIpnp instrument driver functions
      
ViStatus _VI_FUNC TLDFM_init                          (ViRsrc     resourceName,
                                                       ViBoolean  IDQuery,
                                                       ViBoolean  resetDevice,
                                                       ViSession* pInstrumentHandle);
ViStatus _VI_FUNC TLDFM_close                         (ViSession  instrumentHandle);
ViStatus _VI_FUNC TLDFM_reset                         (ViSession  instrumentHandle);
ViStatus _VI_FUNC TLDFM_self_test                     (ViSession  instrumentHandle,
                                                       ViInt16*   pSelfTestResult,
                                                       ViChar     selfTestMessage[]);
ViStatus _VI_FUNC TLDFM_error_query                   (ViSession  instrumentHandle,
                                                       ViInt32*   pErrorCode,
                                                       ViChar     errorMessage[]);
				  
ViStatus _VI_FUNC TLDFM_error_message                 (ViSession  instrumentHandle,
                                                       ViStatus   errorCode,
                                                       ViChar     errorMessage[]);
ViStatus _VI_FUNC TLDFM_revision_query                (ViSession  instrumentHandle,
                                                       ViChar     driverRevision[],
                                                       ViChar     firmwareRevision[]);
//******************************************************************************

ViStatus _VI_FUNC TLDFM_set_USB_access_mode           (ViSession         instrumentHandle,
                                                       TLDFM_Access_Mode accessMode,
                                                       ViString          requestedKey,
                                                       ViChar            accessKey[]);
//******************************************************************************
// segment voltage functions

ViStatus _VI_FUNC TLDFM_get_segment_voltage           (ViSession instrumentHandle,
                                                       ViUInt32  segmentIndex,
                                                       ViReal64* pSegmentVoltage);