src/dmp40j/bindings/TLDFM_64Library.java

package dmp40j.bindings;
import java.util.Collections;
import java.util.Iterator;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.FlagSet;
import org.bridj.IntValuedEnum;
import org.bridj.Pointer;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;
/**
 * Wrapper for library <b>TLDFM_64</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library(value = "TLDFM_64", dependencies = {"TLDFM_64.dll"}) 
@Runtime(CRuntime.class) 
public class TLDFM_64Library {
	static {
		BridJ.register();
	}
	/**
	 * enum values<br>
	 * <i>native declaration : lib\dmp40\TLDFM_def.h</i>
	 */
	public enum TLDFM_Switch_Mode implements IntValuedEnum<TLDFM_Switch_Mode > {
		SM_Auto(0),
		SM_Manual(1);
		TLDFM_Switch_Mode(long value) {
			this.value = value;
		}
		public final long value;
		public long value() {
			return this.value;
		}
		public Iterator<TLDFM_Switch_Mode > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static IntValuedEnum<TLDFM_Switch_Mode > fromValue(int value) {
			return FlagSet.fromValue(value, values());
		}
	};
	/**
	 * enum values<br>
	 * <i>native declaration : lib\dmp40\TLDFM_def.h</i>
	 */
	public enum TLDFM_Access_Mode implements IntValuedEnum<TLDFM_Access_Mode > {
		AM_No_Lock(0),
		AM_Exclusive_Lock(1),
		AM_Shared_Lock(2);
		TLDFM_Access_Mode(long value) {
			this.value = value;
		}
		public final long value;
		public long value() {
			return this.value;
		}
		public Iterator<TLDFM_Access_Mode > iterator() {
			return Collections.singleton(this).iterator();
		}
		public static IntValuedEnum<TLDFM_Access_Mode > fromValue(int value) {
			return FlagSet.fromValue(value, values());
		}
	};
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final String TLDFM_VI_FIND_RSC_PATTERN = (String)"USB?*?{VI_ATTR_MANF_ID==0x1313 && VI_ATTR_MODEL_CODE==0x8016}";
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_MAX_STRING_LENGTH = (int)60;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_MAX_INSTR_NAME_LENGTH = (int)28;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_MAX_SN_LENGTH = (int)28;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_BUFFER_SIZE = (int)256;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_USERTEXT_BUFFER_SIZE = (int)61;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_ERR_DESCR_BUFER_SIZE = (int)512;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_INSTR_WARNING_OFFSET = (int)0x3FFC0900;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_WARNING_TEMP_ELECTRIC = (int)(0x3FFC0900 + 0x00);
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_WARNING_TEMP_IC = (int)(0x3FFC0900 + 0x01);
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_WARNING_TEMP_MIRROR = (int)(0x3FFC0900 + 0x03);
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_SELFTEST_SUCCESS = (int)0x0000;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_SELFTEST_NOT_POS = (int)0xFFFF;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_SELFTEST_PWR_ERR = (int)0x0001;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int TLDFM_SELFTEST_TEMP_ERR = (int)0x0010;
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int T_MIRROR = (int)(0);
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int T_TILT = (int)(1);
	/** <i>native declaration : lib\dmp40\TLDFM_def.h</i> */
	public static final int T_BOTH = (int)(2);
	/**
	 * Global functions<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_device_count(ViSession, ViUInt32*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:5</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_device_count(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViUInt32 > pDeviceCount) {
		return Pointer.pointerToAddress(TLDFM_get_device_count(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pDeviceCount)));
	}
	@Ptr
	protected native static long TLDFM_get_device_count(@Ptr long instrumentHandle, @Ptr long pDeviceCount);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_get_device_information(ViSession, ViUInt32, ViChar[], ViChar[], ViChar[], ViBoolean*, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:8</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_device_information(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 deviceIndex, Pointer<TLDFM_64Library.ViChar > manufacturer, Pointer<TLDFM_64Library.ViChar > instrumentName, Pointer<TLDFM_64Library.ViChar > serialNumber, Pointer<TLDFM_64Library.ViBoolean > pDeviceAvailable, Pointer<TLDFM_64Library.ViChar > resourceName) {
		return Pointer.pointerToAddress(TLDFM_get_device_information(Pointer.getPeer(instrumentHandle), Pointer.getPeer(deviceIndex), Pointer.getPeer(manufacturer), Pointer.getPeer(instrumentName), Pointer.getPeer(serialNumber), Pointer.getPeer(pDeviceAvailable), Pointer.getPeer(resourceName)));
	}
	@Ptr 
	protected native static long TLDFM_get_device_information(@Ptr long instrumentHandle, @Ptr long deviceIndex, @Ptr long manufacturer, @Ptr long instrumentName, @Ptr long serialNumber, @Ptr long pDeviceAvailable, @Ptr long resourceName);
	/**
	 * required VXIpnp instrument driver functions<br>
	 * Original signature : <code>_VI_FUNC TLDFM_init(ViRsrc, ViBoolean, ViBoolean, ViSession*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:19</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_init(TLDFM_64Library.ViRsrc resourceName, TLDFM_64Library.ViBoolean IDQuery, TLDFM_64Library.ViBoolean resetDevice, Pointer<TLDFM_64Library.ViSession > pInstrumentHandle) {
		return Pointer.pointerToAddress(TLDFM_init(Pointer.getPeer(resourceName), Pointer.getPeer(IDQuery), Pointer.getPeer(resetDevice), Pointer.getPeer(pInstrumentHandle)));
	}
	@Ptr 
	protected native static long TLDFM_init(@Ptr long resourceName, @Ptr long IDQuery, @Ptr long resetDevice, @Ptr long pInstrumentHandle);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_close(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:24</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_close(TLDFM_64Library.ViSession instrumentHandle) {
		return Pointer.pointerToAddress(TLDFM_close(Pointer.getPeer(instrumentHandle)));
	}
	@Ptr 
	protected native static long TLDFM_close(@Ptr long instrumentHandle);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_reset(ViSession)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:26</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_reset(TLDFM_64Library.ViSession instrumentHandle) {
		return Pointer.pointerToAddress(TLDFM_reset(Pointer.getPeer(instrumentHandle)));
	}
	@Ptr 
	protected native static long TLDFM_reset(@Ptr long instrumentHandle);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_self_test(ViSession, ViInt16*, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:28</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_self_test(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViInt16 > pSelfTestResult, Pointer<TLDFM_64Library.ViChar > selfTestMessage) {
		return Pointer.pointerToAddress(TLDFM_self_test(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pSelfTestResult), Pointer.getPeer(selfTestMessage)));
	}
	@Ptr 
	protected native static long TLDFM_self_test(@Ptr long instrumentHandle, @Ptr long pSelfTestResult, @Ptr long selfTestMessage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_error_query(ViSession, ViInt32*, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:32</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_error_query(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViInt32 > pErrorCode, Pointer<TLDFM_64Library.ViChar > errorMessage) {
		return Pointer.pointerToAddress(TLDFM_error_query(Pointer.getPeer(instrumentHandle), Pointer.getPeer(pErrorCode), Pointer.getPeer(errorMessage)));
	}
	@Ptr 
	protected native static long TLDFM_error_query(@Ptr long instrumentHandle, @Ptr long pErrorCode, @Ptr long errorMessage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_error_message(ViSession, ViStatus, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:36</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_error_message(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViStatus errorCode, Pointer<TLDFM_64Library.ViChar > errorMessage) {
		return Pointer.pointerToAddress(TLDFM_error_message(Pointer.getPeer(instrumentHandle), Pointer.getPeer(errorCode), Pointer.getPeer(errorMessage)));
	}
	@Ptr 
	protected native static long TLDFM_error_message(@Ptr long instrumentHandle, @Ptr long errorCode, @Ptr long errorMessage);
	/**
	 * Original signature : <code>_VI_FUNC TLDFM_revision_query(ViSession, ViChar[], ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:40</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_revision_query(TLDFM_64Library.ViSession instrumentHandle, Pointer<TLDFM_64Library.ViChar > driverRevision, Pointer<TLDFM_64Library.ViChar > firmwareRevision) {
		return Pointer.pointerToAddress(TLDFM_revision_query(Pointer.getPeer(instrumentHandle), Pointer.getPeer(driverRevision), Pointer.getPeer(firmwareRevision)));
	}
	@Ptr 
	protected native static long TLDFM_revision_query(@Ptr long instrumentHandle, @Ptr long driverRevision, @Ptr long firmwareRevision);
	/**
	 * ******************************************************************************<br>
	 * Original signature : <code>_VI_FUNC TLDFM_set_USB_access_mode(ViSession, ViUInt32, ViString, ViChar[])</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:46</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_set_USB_access_mode(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 accessMode, TLDFM_64Library.ViString requestedKey, Pointer<TLDFM_64Library.ViChar > accessKey) {
		return Pointer.pointerToAddress(TLDFM_set_USB_access_mode(Pointer.getPeer(instrumentHandle), Pointer.getPeer(accessMode), Pointer.getPeer(requestedKey), Pointer.getPeer(accessKey)));
	}
	@Ptr 
	protected native static long TLDFM_set_USB_access_mode(@Ptr long instrumentHandle, @Ptr long accessMode, @Ptr long requestedKey, @Ptr long accessKey);
	/**
	 * segment voltage functions<br>
	 * Original signature : <code>_VI_FUNC TLDFM_get_segment_voltage(ViSession, ViUInt32, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:54</i>
	 */
	public static TLDFM_64Library._VI_FUNC TLDFM_get_segment_voltage(TLDFM_64Library.ViSession instrumentHandle, TLDFM_64Library.ViUInt32 segmentIndex, Pointer<TLDFM_64Library.ViReal64 > pSegmentVoltage) {
		return Pointer.pointerToAddress(TLDFM_get_segment_voltage(Pointer.getPeer(instrumentHandle), Pointer.getPeer(segmentIndex), Pointer.getPeer(pSegmentVoltage)));
	}
	@Ptr 
	protected native static long TLDFM_get_segment_voltage(@Ptr long instrumentHandle, @Ptr long segmentIndex, @Ptr long pSegmentVoltage);
